Better currency treatment